<resources>
    <string name="app_name">Learning_Android_Contact_Book_Kulakov</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="next">Далее</string>

    <string name="contact_data_1">Имя: %s\nФамилия: %s\nОтчество: %s</string>
    <string name="phone">Номер телефона</string>
    <string name="email">Email</string>
    <string name="link">Ссылка на соц сети</string>

    <string name="open_camera">Открыть камеру</string>
    <string name="open_gallery">Открыть галерею</string>
    <string name="contact_data_2">Номер телефона: %s\nEmail: %s\nСсылка на соц. сети: %s</string>

    <string name="register">Зарегистрировать</string>

    <string name="select_photo">Выбрать фото</string>
    <string-array name="select_photo">
        <item>Камера</item>
        <item>Галерея</item>
    </string-array>
</resources>