<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContactData1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        tools:text="@string/contact_data_1" />

    <TextView
        android:id="@+id/tvContactData2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvContactData1"
        tools:text="@string/contact_data_2" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/person_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContactData2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddFromCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/open_camera"
        app:layout_constraintTop_toBottomOf="@id/ivPhoto" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddFromGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_gallery"
        app:layout_constraintTop_toBottomOf="@id/btnAddFromCamera" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>